manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  type : LoadBalancer
  ports:
  - port: 3000
    targetPort : 8080
    protocol: TCP
    name: http
  selector:
    app: demo-app
