manifests/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: portainer
spec:
    rules:
    - host: portainer.dc66a989-0987-4923-8003-8ad297259d94.k8s.civo.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: portainer
                port:
                   number: 9000
